fix layout issues in main middle

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -121,12 +121,10 @@ $hover-text-color: rgb(255, 255, 255);
 .main__middle {
     grid-column: 2/3;
     background-color: $side-color;
-    max-width: 1000px;
-
 }
 
 .main__middle-nav-top {
-    width: 59%;
+    width: 71.5%;
     height: 50px;
     overflow: hidden;
     background-color: $side-color;
@@ -171,7 +169,7 @@ $hover-text-color: rgb(255, 255, 255);
 
 .main__left-middle-nav-right {
     grid-column: 2/3;
-    width: 60%;
+    width: 77%;
     height: 100px;
     overflow: hidden;
     display: flex;
@@ -207,6 +205,7 @@ $hover-text-color: rgb(255, 255, 255);
 
 .main__middle-nav--sticky {
     background: linear-gradient(rgb(105, 105, 105), $side-color);
+    opacity: 1;
     height: 120px;
     padding-top: 70px;
     position: sticky;
